started to create design for swipe cards also fixed top spacing using display flex for app space

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,9 @@ body {
   padding-top: 60px;
 }
 
+.App_space {
+display: flex;
+}
 
 .text_transition {
   transition: opacity 0.35s ease-in-out;
