--- a/src/styles/partials/Pages/_about.scss
+++ b/src/styles/partials/Pages/_about.scss
@@ -9,7 +9,7 @@
         opacity: 0;
         position: relative;
         width: 100%;
-        margin-top: 0;
+        margin-top: 12%;
 
         .aboutHead {
             position: relative;
@@ -103,6 +103,7 @@
 @media only screen and (min-width: 640px) {
     .aboutStyles {
         .aboutContainer {
+            margin-top: 0;
             .aboutHead {
                 height: 25vh;
             }
