--- a/src/styles/partials/Pages/_webapp.scss
+++ b/src/styles/partials/Pages/_webapp.scss
@@ -1,5 +1,61 @@
 .webAppStyles {
     height: 100vh;
-    display: flex;
-    flex-direction: column;
+    width: 100%;
+    position:relative;
+    overflow-x: hidden;
+    .Stack {
+        width: 100%;
+        height: 100%;
+    }
+    .Cards {
+        position: absolute;
+        width: 85%;
+        height: 80vh;
+        background: #7510f7;
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 5%;
+        left: 0;
+        right: 0;
+        text-align: center;
+        border-radius: 3px;
+        .cardHead {
+            background: white;
+            margin-top: -8px;
+            h1 {
+                margin-top: 0;
+                text-align: left;
+                width: 100%;
+                margin-bottom: 2px;
+                margin-left: 2px;
+            }
+            p {
+                font-size: 0.8rem;
+                color: black;
+                text-align: left;
+                margin-top: 0;
+                margin-left: 2px;
+            }
+        }
+
+        iframe {
+            width: 100%;
+            height: auto;
+        }
+        li {
+            list-style: none;
+            color: white;
+        }
+        p {
+            color: white;
+            text-align: left;
+            margin-left: 4px;
+            margin-right: 4px;
+        }
+        img {
+            width: 100%;
+            height: auto;
+        }
+    }
 }
